--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,43 +1,23 @@
-name: Ultimate Proxy Automator
+name: Curate and Package Subscriptions
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 */3 * * *' # 每3小时运行一次
+    - cron: '0 1,9,17 * * *'
 
 jobs:
-  automate:
+  build:
     runs-on: ubuntu-latest
-
-    # VVVV 在这里添加这两行 VVVV
     permissions:
       contents: write
-    # ^^^^ 在这里添加这两行 ^^^^
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with: { python-version: '3.10' }
+      - run: pip install aiohttp PyYAML
+      - run: python proxy_automator.py
+        env: { GITHUB_REPOSITORY: ${{ github.repository }} }
+      - uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install aiohttp PyYAML
-
-      - name: Run Automator Script
-        run: python proxy_automator.py
-        env:
-          GITHUB_REPOSITORY: ${{ github.repository }}
-
-      - name: Commit and Push Changes
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: "🚀 Auto-update proxy data"
-          file_pattern: "*.yaml *.txt *.csv *.md"
-          commit_user_name: "GitHub Actions Bot"
-          commit_user_email: "actions@github.com"
-          commit_author: "GitHub Actions Bot <actions@github.com>"
+          commit_message: "📦 [Automated] Update subscription task package"
+          file_pattern: "link_database.csv sub_list_for_testing.txt cached_subs/*"
