--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,39 +1,38 @@
-name: Curate and Package Subscriptions
+name: Ultimate Subscription Curator
 
 on:
+  # 允许手动触发
   workflow_dispatch:
+  # 您指定的每日四次运行时间 (UTC)
   schedule:
-    - cron: '0 1,9,17 * * *'
+    - cron: '0 2,10,18,22 * * *' # KST: 11:00, 19:00, 次日03:00, 07:00
 
 jobs:
-  build:
+  curate-and-package:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-
     steps:
-      - name: Checkout Repository
+      - name: 1. Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: 2. Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
-      - name: Install Dependencies
+      - name: 3. Install Dependencies
         run: pip install aiohttp PyYAML
 
-      # ##############################################
-      # ### 这里是修正后的部分 ###
-      # ##############################################
-      - name: Run Automator Script
+      - name: 4. Run The Ultimate Automator Script
         run: python proxy_automator.py
         env:
+          # 将仓库名称注入环境变量，供脚本生成链接时使用
           GITHUB_REPOSITORY: ${{ github.repository }}
-      # ##############################################
 
-      - name: Commit and Push Changes
+      - name: 5. Commit All Artifacts
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "📦 [Automated] Update task package and database"
-          file_pattern: "link_database.csv sub_list_for_testing.txt cached_subs/*"
+          commit_message: "🚀 [Automated] Update subscription data"
+          # 提交所有脚本生成和修改的文件
+          file_pattern: "link_database.csv archive.csv sub_list_for_testing.txt cached_subs/* clash.yaml clash_lite.yaml"
