--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
-# .github/workflows/main.yml
 name: Modular Subscription Pipeline
 
 on:
@@ -12,32 +11,35 @@ jobs:
     permissions:
       contents: write
     steps:
-      - name: Checkout Repository
+      - name: 1. Checkout Repository
         uses: actions/checkout@v4
-      - name: Set up Python
+
+      - name: 2. Set up Python
         uses: actions/setup-python@v5
-        with: { python-version: '3.10' }
-      - name: Install Dependencies
+        with:
+          python-version: '3.10'
+
+      - name: 3. Install Dependencies
         run: pip install aiohttp PyYAML
 
-      - name: Step 1: Run ID Manager
+      - name: 4. Run Step 1: ID Manager
         run: python id_manager.py
 
-      - name: Step 2: Run Curator
+      - name: 5. Run Step 2: Curator
         run: python curator.py
 
-      - name: Step 3: Run Fetcher
+      - name: 6. Run Step 3: Fetcher
         run: python fetcher.py
 
-      - name: Step 4: Run Parser
+      - name: 7. Run Step 4: Parser
         run: python parser.py
 
-      - name: Step 5: Run Packager
+      - name: 8. Run Step 5: Packager
         run: python packager.py
         env:
           GITHUB_REPOSITORY: ${{ github.repository }}
 
-      - name: Commit All Artifacts
+      - name: 9. Commit All Artifacts
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "🚀 [Automated] Update subscription data pipeline"
