--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Modular Subscription Pipeline
+name: Subscription Curation Workflow
 
 on:
   workflow_dispatch:
@@ -6,41 +6,29 @@ on:
     - cron: '0 2,10,18 * * *'
 
 jobs:
-  process-subscriptions:
+  curate-links:
     runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
-      - name: 1. Checkout Repository
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: 2. Set up Python
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
-      - name: 3. Install Dependencies
+      - name: Install Dependencies
         run: pip install aiohttp PyYAML
 
-      - name: 4. Run Step 1 - ID Manager
-        run: python id_manager.py
-
-      - name: 5. Run Step 2 - Curator
-        run: python curator.py
-
-      - name: 6. Run Step 3 - Fetcher
-        run: python fetcher.py
-
-      - name: 7. Run Step 4 - Parser
-        run: python parser.py
-
-      - name: 8. Run Step 5 - Packager
-        run: python packager.py
+      - name: Run Curator and Cacher
+        run: python proxy_automator.py
         env:
           GITHUB_REPOSITORY: ${{ github.repository }}
 
-      - name: 9. Commit All Artifacts
+      - name: Commit All Changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "🚀 [Automated] Update subscription data pipeline"
-          file_pattern: "*.csv *.json *.yaml *.txt cached_subs/*"
+          commit_message: "🚀 [Automated] Update subscription task list"
+          file_pattern: "link_database.csv sub_list_for_testing.txt cached_subs/*"
