--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,20 @@
 name: Ultimate Proxy Automator
 
 on:
-  # 允许您在 Actions 标签页手动触发这个工作流
   workflow_dispatch:
-  
-  # 设定最优执行频率：每3小时一次。'0 */3 * * *' 表示在 0, 3, 6, 9, 12, 15, 18, 21点执行
   schedule:
     - cron: '0 */3 * * *'
 
 jobs:
   automate:
     runs-on: ubuntu-latest
+    
+    # =========================================================
+    # --- 在这里添加下面的 permissions 配置块 ---
+    permissions:
+      contents: write
+    # =========================================================
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -28,14 +32,12 @@ jobs:
       - name: Run Automator Script
         run: python proxy_automator.py
         env:
-          # 将仓库名称注入环境变量，供脚本使用
           GITHUB_REPOSITORY: ${{ github.repository }}
 
       - name: Commit and Push Changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "🚀 Auto-update proxy data"
-          # 匹配所有需要提交的文件
           file_pattern: "*.yaml *.txt *.csv *.md"
           commit_user_name: "GitHub Actions Bot"
           commit_user_email: "actions@github.com"
