--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,17 +3,16 @@ name: Ultimate Proxy Automator
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 */3 * * *'
+    - cron: '0 */3 * * *' # 每3小时运行一次
 
 jobs:
   automate:
     runs-on: ubuntu-latest
-    
-    # =========================================================
-    # --- 在这里添加下面的 permissions 配置块 ---
+
+    # VVVV 在这里添加这两行 VVVV
     permissions:
       contents: write
-    # =========================================================
+    # ^^^^ 在这里添加这两行 ^^^^
 
     steps:
       - name: Checkout repository
